2008-05-30  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-index.[ch]: New files. Provide methods
	to store data in the QDBM index.
	* src/tracker-indexer/Makefile.am: Added these files to build.
	* src/tracker-indexer/tracker-indexer.c: Pass all metadata contents 
	through the parser and store all the results with TrackerIndex.

2008-05-30  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/Makefile.am: Do not force -g.

2008-05-30  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-parser.c
	(tracker_parser_text_into_array): reverse wrongly passed arguments to
	tracker_parser_text_to_string(). Also strip leading and trailing
	whitespaces in order not to end with "\0" strings in the array.

2008-05-30  Carlos Garnacho  <carlos@imendio.com>

	* tracker-indexer-db.[ch] (tracker_db_increment_stats)
	(tracker_db_create_service):
	* tracker-indexer.c (process_file): Pass around the TrackerService
	instead of having to look it up in the ontology several times.

2008-05-30  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged indexer-split with xesam-support
	svn merge -r 1495:1538 ../xesam-support

2008-05-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged xesam-support with indexer-split
	svn merge -r 1524:1537 ../indexer-split

2008-05-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-dbus-xesam.c:
	* src/trackerd/tracker-dbus-xesam.h:

	Refactored tracker_dbus_xesam_emit_search_done to
	tracker_xesam_live_search_emit_done

2008-05-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged xesam-support with indexer-split
	svn merge -r 1502:1524 ../indexer-split

2008-05-29  Martyn Russell  <martyn@imendio.com>

	* configure.ac:
	* data/Makefile.am:
	* data/dbus/Makefile.am:
	* data/org.freedesktop.Tracker.Indexer.service.in:
	* data/org.freedesktop.Tracker.service.in:
	* data/tracker-dbus-daemon.xml:
	* data/tracker-dbus-files.xml:
	* data/tracker-dbus-keywords.xml:
	* data/tracker-dbus-metadata.xml: